Cyberduck
FTP, SFTP, WebDAV, Cloud Files, Google Docs, Windows Azure & Amazon S3 Browser for Mac OS X.
http://cyberduck.ch/

Changelog. Last modified: $Date$

4.0 [http://trac.cyberduck.ch/milestone/4.0]
- [Feature] Version for Microsoft Windows XP, Windows Vista & Windows 7.
- [Feature] Connecting to Windows Azure Blob Storage (Azure) (#3938)

3.6.2 (Sep-20-2010) [http://trac.cyberduck.ch/milestone/3.6.2]
- [Bugfix] Files pasted upload to parent directory (#5155)
- [Feature] Display hidden files in upload prompt (#1243)
- [Feature] Import Transmit favorites (#3073)

3.6.1 (Sep-07-2010) [http://trac.cyberduck.ch/milestone/3.6.1]
- [Bugfix] Permissions reset (FTP) (#5132)
- [Bugfix] Failure reading symbolic link target for directories (SFTP) (#5141)

3.6 (Sep-06-2010) [http://trac.cyberduck.ch/milestone/3.6]
- [Feature] Connecting to Google Storage (Google Storage)
- [Feature] Edit Access Control List (ACL) (#3191) (S3, Google Storage, Google Docs)
- [Feature] Enable Bucket Versioning (#4511) (S3)
- [Feature] Enable Bucket Multi-Factor Authentication Delete (#4510) (S3)
- [Feature] Display previous file versions in browser (S3)
- [Feature] Download previous file version (S3)
- [Feature] Revert to previous file version (S3)
- [Feature] Default root file (index.html) configuration for distribution (CloudFront)
- [Feature] Eucalyptus Walrus support enabled by default (S3)
- [Feature] Duplicate Bookmark (#3385)
- [Feature] Import bookmarks from thirdparty applications (Filezilla, Fetch, Interarchy, Flow) (#3373)
- [Feature] Copy directory listing to clipboard (#2372)
- [Feature] Support for thirdparty terminal applications (#2987)
- [Feature] Change SSH options for open in Terminal.app (#4232)
- [Feature] Unsecure connection warning when password is transmitted in plaintext
- [Feature] Alert to change connection to TLS if server supports AUTH TLS (FTP)
- [Feature] Edit metadata for multiple files (S3, Google Storage)