@@ -44,10 +44,14 @@
             "http://trac.cyberduck.ch/milestone/3.6.2">Version 3.6.2</a></strong><br/>
 
     <ul>
-        <li>[Bugfix] Files pasted upload to parent directory (<a href="http://trac.cyberduck.ch/ticket/5155">#5155</a>)</li>
-        <li>[Feature] Display hidden files in upload prompt (<a href="http://trac.cyberduck.ch/ticket/1243">#1243</a>)</li>
+        <li>[Bugfix] Files pasted upload to parent directory (<a href="http://trac.cyberduck.ch/ticket/5155">#5155</a>)
+        </li>
+        <li>[Feature] Display hidden files in upload prompt (<a href="http://trac.cyberduck.ch/ticket/1243">#1243</a>)
+        </li>
         <li>[Feature] Import Transmit favorites (<a href="http://trac.cyberduck.ch/ticket/3073">#3073</a>)</li>
-
+        <li>[Bugfix] Uploading .xlsx or .docx documents fails with permission error (<a
+                href="http://trac.cyberduck.ch/ticket/5169">#5169</a>) (Google Docs)
+        </li>
     </ul>
 
     <strong><a href=
